--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Flask</title>
-</head>
-<body>
-    
-    <nav>
-        <ul>
-            <li><a href="{{url_foor('index')}}">Home</a></li>
-            <li><a href="{{url_foor('about')}}">About</a></li>
-            <li><a href="{{url_foor('contact')}}">Contact</a></li>
-        </ul>
-    </nav>
-
+{% extends "base.html" %}
+{% block content%}
     <h1>About Page</h1>
-</body>
-</html>
+{% endblock %}
