update image in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 	</nav>
 
     <!-- Page Header -->
-	<header class="masthead" style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+	<header class="masthead" style="background-image: url('https://www.shutterstock.com/image-vector/viking-scandinavian-warrior-cartoon-character-600nw-2091541564.jpg')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -53,9 +53,9 @@
     <!-- Main Content -->
     <div class="container">
 
-        {% block content %}
-        {% endblock %}
-
+    {% block content %}
+    {% endblock %}
+    
     </div>
 
     <hr>
