style nav bar content

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<div class="site-heading">
 						<h1>Viking &amp; Company</h1>
-						<span class="subheading">Viking and his company </span>
+						<span class="subheading">Viking and his company of friends</span>
 					</div>
 				</div>
 			</div>
