implement logic in h2 of carrers, contact and about files

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,35 @@
 {% extends "base.html" %}
 {% block content%}
-    <h2>About Page</h2>
+    <h2>{{ page_title }}</h2>
+    <p>
+        Vikings is the modern name given to seafaring people originally from Scandinavia, who from the late 8th to the
+        late 11th centuries raided, pirated, traded and settled throughout parts of Europe. It’s easy to think of the
+        Vikings simply as terrifying warriors but they also had regular baths and cleaned
+        their ears using special spoons.
+    </p>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Fun Facts</h3>
+			<p>
+			    You might not think Vikings cared about their appearance but they did!
+			    They really liked blonde hair and found a way to dye it.
+			    There were no hairdressers back then and so they used soap with something called lye in it which would lighten
+			    their hair.
+			</p>
+
+            <p>
+                The Vikings were brilliant at making boats and ships.
+                Their longboats could fit 60 people in at a time which was very impressive in those times.
+            </p>
+
+            <p>
+                Old Norse was the language that Vikings used.
+                In the Old Norse language Viking meant pirate raid!
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/d2b79441825875.57b5c59f733a2.jpg" alt="">
+        </div>
+    </div>
 {% endblock %}
