--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content%}
+
+
+{% for number in list_of_numbers %}
+<p>{{ number }}</p>
+{% endfor %}
+
+
     <h2>{{ page_title }}</h2>
     <p>
         Vikings is the modern name given to seafaring people originally from Scandinavia, who from the late 8th to the
